<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@mipmap/login_wallpaper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/jetbrains"
        android:textSize="20sp"
        android:layout_marginTop="90sp"
        android:id="@+id/appName"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:src="@drawable/ic_baseline_local_movies_24"
        android:contentDescription="@string/description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="314sp"
        android:layout_height="60sp"
        android:id="@+id/loginEmail"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="314sp"
        android:layout_height="65sp"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/loginBtn"
        android:fontFamily="@font/jetbrains"
        android:backgroundTint="@color/teal_700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt_1"
        android:fontFamily="@font/jetbrains"
        android:textSize="20sp"
        android:layout_below="@+id/loginBtn"
        android:layout_marginStart="45sp"
        android:layout_marginTop="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toRegsiter"
        android:text="@string/login_txt_2"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="15sp"
        android:layout_marginStart="160sp"
        android:fontFamily="@font/jetbrains"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/gold"/>

</RelativeLayout>

