<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@mipmap/register_wallpaper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/jetbrains"
        android:textSize="20sp"
        android:layout_marginTop="90sp"
        android:id="@+id/appName"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/logo1"
        android:src="@drawable/ic_baseline_local_movies_24"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="314sp"
        android:layout_height="60sp"
        android:id="@+id/registerEmail"
        app:endIconMode="clear_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="40sp"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="314sp"
        android:layout_height="60sp"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registerEmail"
        android:layout_marginTop="40sp"
        app:endIconMode="password_toggle"
        android:id="@+id/registerPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/register_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="@string/register"
        android:fontFamily="@font/jetbrains"
        android:backgroundTint="@color/teal_700"/>

</RelativeLayout>